--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
+
 <head>
-  <meta charset="utf-8">
-  <title>KoreanStreetFoodAngular</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <base href="/" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Korean Street Food</title>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
